# Vision-Learning-3D

./: .gitignore  requirements.txt  resolucion.ipynb
datasets/stereo_budha_board/data/: stereo_calibration.pkl
datasets/stereo_budha_charuco/cfg/: stereo.yaml
datasets/stereo_budha_charuco/data/: stereo_calibration.pkl
my_datasets/cfg/: stereo.yaml
my_datasets/data/: stereo_calibration.pkl
recon3d/: README.md  pyproject.toml
recon3d/src/recon3d/: __init__.py  calib.py  cli.py  disparity.py  fuse.py  io_utils.py  measure.py  pnp.py  rectify.py  reproject.py  viz.py
